--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:54:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductWithoutLoginTest.addProductWithoutLogin()[pri:0, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">addProductWithoutLogin</td> 
-  <td>main@446073433</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:54:35</td>   <td>18536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductWithoutLoginTest.clickChkoutBtnTest()[pri:3, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">clickChkoutBtnTest</td> 
-  <td>main@446073433</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:54:22</td>   <td>6114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductWithoutLoginTest.clickViewCartBtnTest()[pri:2, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">clickViewCartBtnTest</td> 
-  <td>main@446073433</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:54:38</td>   <td>21953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductWithoutLoginTest.getLoginPageTest()[pri:4, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">getLoginPageTest</td> 
-  <td>main@446073433</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:53:57</td>   <td>-19204</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddProductWithoutLoginTest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@446073433</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:54:39</td>   <td>22440</td> <td>&nbsp;</td><td title="&lt;&lt;AddProductWithoutLoginTest.tearDown()[pri:0, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@446073433</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>19/11/04 15:54:22</td>   <td>5418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductWithoutLoginTest.validateCartMsgTest()[pri:1, instance:com.training.sanity.tests.AddProductWithoutLoginTest@1593948d]">validateCartMsgTest</td> 
-  <td>main@446073433</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.adminLoinTest()[pri:0, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">adminLoinTest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:34</td>   <td>2046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickCatatlogtabtest()[pri:2, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickCatatlogtabtest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:34</td>   <td>1952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickDashBtnTest()[pri:1, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickDashBtnTest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:38</td>   <td>6440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickDatatabtest()[pri:4, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickDatatabtest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:40</td>   <td>7913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickDiscountTabTest()[pri:6, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickDiscountTabTest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:39</td>   <td>7164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickLinksTabTest()[pri:5, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickLinksTabTest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:34</td>   <td>2228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickProducttabtest()[pri:3, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickProducttabtest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:54</td>   <td>21711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.clickRewardPointsTabTest()[pri:7, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">clickRewardPointsTabTest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:19</td>   <td>-13292</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminProductTest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:58</td>   <td>25564</td> <td>&nbsp;</td><td title="&lt;&lt;AdminProductTest.tearDown()[pri:0, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1181199958</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/11/07 12:52:57</td>   <td>25405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminProductTest.validateSuccessmsgTest()[pri:8, instance:com.training.sanity.tests.AdminProductTest@1b604f19]">validateSuccessmsgTest</td> 
+  <td>main@1181199958</td>   <td></td> </tr>
 </table>
